Overall 80% coverage
85% >= coverage for each individual class